# pakpak

./: .gitignore  CMakeLists.txt  README.txt
.github/workflows/: cmake-multi-platform.yml
src/: const.h  main.c  pak.c  pak.h  readops.c  readops.h  writeops.c  writeops.h
